[gd_scene load_steps=3 format=3 uid="uid://d0x5077swvd2t"]

[ext_resource type="PackedScene" uid="uid://b78h2t3hvwijs" path="res://Scenes/background.tscn" id="1_i61hb"]
[ext_resource type="Script" path="res://Scripts/kanji_scripts/kanji_level_3_numbers.gd" id="1_s2yg8"]

[node name="kanji_level_3_numbers" type="Node2D"]
script = ExtResource("1_s2yg8")

[node name="background" parent="." instance=ExtResource("1_i61hb")]

[node name="Back" type="Button" parent="."]
offset_left = 752.0
offset_top = 80.0
offset_right = 1002.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 85
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = -88.0
offset_top = 280.0
offset_right = 1162.0
offset_bottom = 930.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 250
text = "question"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="ColorRect1" type="ColorRect" parent="."]
visible = false
offset_left = 184.0
offset_top = 1048.0
offset_right = 934.0
offset_bottom = 1298.0

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 184.0
offset_top = 1048.0
offset_right = 934.0
offset_bottom = 1298.0

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 184.0
offset_top = 1048.0
offset_right = 934.0
offset_bottom = 1298.0
theme_override_font_sizes/font_size = 85
placeholder_text = "\"çŒ«\""
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="pronouns" type="Label" parent="."]
offset_left = 190.0
offset_top = 280.0
offset_right = 940.0
offset_bottom = 430.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 85
text = "pronoun"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="AnswerDisplay" type="Label" parent="."]
offset_left = 190.0
offset_top = 816.0
offset_right = 940.0
offset_bottom = 966.0
theme_override_font_sizes/font_size = 85
text = "answer"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
